# Low-Level-Operating-System-Basics-in-C

Address Translation/: CMakeLists.txt  README.md  run.sh
Address Translation/src/: CMakeLists.txt  parta.c  parta.h
Address Translation/tests/: test_a.cpp
CPU Schedule Simulator/: README.md  run.sh
CPU Schedule Simulator/src/: CMakeLists.txt  parta.c  parta.h  parta_main.c
CPU Schedule Simulator/tests/: CMakeLists.txt  parta.bats  parta_fcfs5_output.txt  parta_usage_output.txt  test_a.cpp
Deadlock Detection Algorithm/: CMakeLists.txt  run.sh
Deadlock Detection Algorithm/src/: CMakeLists.txt  parta.c  parta.h  partb-1.c  partb-2.c  partb-extra.c  partb.h
Deadlock Detection Algorithm/tests/: test_a.cpp
Linux Kernel Threads/: CMakeLists.txt  run.sh
Linux Kernel Threads/src/: parta.c  partb.c  partc-sample.c  partc.c
Linux Kernel Threads/tests/: parta.bats  parta_1_output.txt  parta_2_output.txt  parta_4_output.txt  parta_8_output.txt  parta_noargs_output.txt  partb.bats  partb_2_output.txt  partb_4_output.txt  partb_8_output.txt  partb_X_output.txt  partb_noargs_output.txt  partc.bats  partc_noargs_output.txt
Memory Management Allocation/: CMakeLists.txt  run.sh
Memory Management Allocation/src/: CMakeLists.txt  parta.c  parta.h
Memory Management Allocation/tests/: CMakeLists.txt  test_a.cpp
Shell Command Line Interface/: CMakeLists.txt  run.sh
Shell Command Line Interface/src/: CMakeLists.txt  parta_main.c  partb.c  partb.h  partb_main.c
Shell Command Line Interface/tests/: CMakeLists.txt  cities.csv  hw_200.csv  parta.bats  parta_echoHelloBoston_output.txt  parta_h1t1_cities.txt  parta_head4_cities.txt  parta_noargs_output.txt  parta_t1h1_cities.txt  parta_t4h1_cities.txt  parta_tail4_cities.txt  partb.bats  partb_noargs_output.txt  test_b.cpp
