set(WARNING_CFLAGS -Wall -Wextra -Werror -Wfatal-errors -Wshadow -Wvla -Wfloat-conversion -Wfloat-equal)
set(NOWARN_CFLAGS -Wno-unused -Wno-sign-conversion -Wno-unused-parameter -Wno-unknown-warning-option)
set(MY_CFLAGS ${WARNING_CFLAGS} ${SANITIZER_CFLAGS} ${NOWARN_CFLAGS})

foreach(PART parta)
    add_library(${PART} OBJECT ${PART}.c ${PART}.h)
    target_include_directories(${PART} PUBLIC .)
    target_compile_options(${PART} PRIVATE ${MY_CFLAGS})
    target_compile_features(${PART} PUBLIC c_std_17)
    target_link_options(${PART} PUBLIC ${SANITIZER_CFLAGS})
endforeach()

foreach(PART partb-1 partb-2 partb-extra)
    add_executable(${PART} ${PART}.c)
    target_include_directories(${PART} PUBLIC .)
    target_compile_options(${PART} PRIVATE ${MY_CFLAGS})
    target_compile_features(${PART} PUBLIC c_std_17)
    target_link_options(${PART} PUBLIC ${SANITIZER_CFLAGS})
endforeach()
